[gd_scene load_steps=3 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Layer.tscn" type="PackedScene" id=2]

[node name="main" type="Node2D"]

[node name="Control 2" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 2.0
margin/right = 1029.0
margin/bottom = 598.0
script/script = ExtResource( 1 )

[node name="Layer" parent="Control 2" instance=ExtResource( 2 )]

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 43.0
margin/top = 500.0
margin/right = 139.0
margin/bottom = 573.0
color = Color( 0.875, 0.0341797, 0.743622, 1 )

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 165.0
margin/top = 497.0
margin/right = 275.0
margin/bottom = 573.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
color = Color( 1, 1, 1, 1 )
edit_alpha = true

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 291.0
margin/top = 36.0
margin/right = 384.0
margin/bottom = 50.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="input_event" from="Control 2" to="Control 2" method="_on_Control_2_input_event"]

[connection signal="input_event" from="ColorFrame" to="Control 2" method="_on_ColorFrame_input_event"]

[connection signal="color_changed" from="ColorPickerButton" to="Control 2" method="_on_ColorPickerButton_color_changed"]


